src/objects/BMCServiceDesk__Normalization_Transaction__c.object
<CustomObject>
    <description>Stores records that are generated as exceptions to normalization rules.</description>
    <fields>
        <fullName>BMCServiceDesk__FKBase_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Element</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Normalization Transactions</relationshipLabel>
        <relationshipName>Normalization_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKModel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model</label>
        <referenceTo>BMCServiceDesk__Model__c</referenceTo>
        <relationshipLabel>Normalization Transactions</relationshipLabel>
        <relationshipName>Normalization_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKNormalization_Metadata__c</fullName>
        <label>Normalization Metadata</label>
        <referenceTo>BMCServiceDesk__Normalization_Metadata__c</referenceTo>
        <relationshipLabel>Normalization Transactions</relationshipLabel>
        <relationshipName>Normalization_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKNormalization_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Normalization Rule</label>
        <referenceTo>BMCServiceDesk__Normalization_Rule__c</referenceTo>
        <relationshipLabel>Normalization Transactions</relationshipLabel>
        <relationshipName>Normalization_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKNormalization_Transaction_Master__c</fullName>
        <label>Normalization Transaction Master</label>
        <referenceTo>BMCServiceDesk__Normalization_Transaction_Master__c</referenceTo>
        <relationshipLabel>Normalization Transactions</relationshipLabel>
        <relationshipName>Normalization_Transactions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Normalization Transaction</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Transaction-{0000}</displayFormat>
        <label>Normalization Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Normalization Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>